--- a/src/panels/menus/MainStyle.css
+++ b/src/panels/menus/MainStyle.css
@@ -37,12 +37,12 @@ body[scheme="dark"] .Tappable {
 body[scheme="dark"] .Tabbar{
   background: #000000;
 }
-body[scheme="dark"] table.RaspTable {
+body[scheme="dark"] table.ScheduleTable {
   color: #ffffff;
   width: 100%;
   text-align: left;
 }
-body[scheme="dark"] table.RaspTable tbody td {
+body[scheme="dark"] table.ScheduleTable tbody td {
   color: #d6d6d6;
   font-size: 16px;
 }
@@ -53,45 +53,45 @@ body[scheme="dark"] .Spinner {
 .Placeholder {
   vertical-align: 'middle';
 }
-table.RaspTable {
+table.ScheduleTable {
     width: 100%;
     text-align: left;
   }
-  table.RaspTable tbody td {
+  table.ScheduleTable tbody td {
     
     font-size: 16px;
   }
-  table.RaspTable tbody tr td.RaspTime {
+  table.ScheduleTable tbody tr td.ScheduleTime {
     width: 12%;
     text-align: center;
   }
-  table.RaspTable tbody tr td.RaspTimeP {
+  table.ScheduleTable tbody tr td.ScheduleTimeP {
     width: 4%;
     text-align: center;
   }
-  table.RaspTable tbody tr td.RaspAudit {
+  table.ScheduleTable tbody tr td.ScheduleAudit {
     text-align: right;
     width: 10%;
   }
-  table.RaspTable tbody tr td.RaspAuditP {
+  table.ScheduleTable tbody tr td.ScheduleAuditP {
     font-size: 12px;
     text-align: left;
     width: 13%;
   }
-  table.RaspTable tbody tr td.RaspLesson {
+  table.ScheduleTable tbody tr td.ScheduleLesson {
     text-align: center;
     width: 48%;
   }
-  table.RaspTable tbody tr td.RaspLessonP {
+  table.ScheduleTable tbody tr td.ScheduleLessonP {
     text-align: center;
     width: 48%;
   }
-  table.RaspTable tbody tr td.RaspPrep {
+  table.ScheduleTable tbody tr td.SchedulePrep {
     text-align: left;
     width: 20%;
   }
   
-  table.RaspTable tbody tr td {
+  table.ScheduleTable tbody tr td {
     text-align: left;
   }
   .PanelHeader .PanelHeader-content {
